kubernetes/apps/rook-ceph/rook-ceph/cluster/objectstore-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-objectstore
  namespace: rook-ceph
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - &host "s3.${SECRET_DOMAIN}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-rgw-ceph-objectstore
                port:
                  number: 80
